--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "escodegen": "^1.11.0",
         "esprima": "^4.0.0",
+        "expression-eval": "^1.4.0",
         "jquery": "^3.3.1"
     },
     "devDependencies": {
